<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">


        <TextView
            android:id="@+id/text_view_first_name_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name_w_colon"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/first_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_view_last_name_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name_w_colon"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/last_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_view_age_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_w_colon"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_marginBottom="15dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_view_email_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address_w_colon"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/email_address"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_view_bank_affiliate_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_affiliate_w_colon"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_bank_affiliate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_affiliate"
            android:textSize="24sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>