<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionDetailsActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/text_view_transaction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/placeholder_transaction_title_here"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_view_transaction_date_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_transaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_transaction_date_here"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/text_view_transaction_from_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_account_w_colon"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_view_transaction_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_from_account_here"
                android:layout_marginBottom="15dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_transaction_to_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_account_w_colon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_transaction_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/placeholder_to_account_here"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_transaction_amount_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_w_colon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_amount_here"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/text_view_transaction_type_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_transaction_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/placeholder_type_here"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_transaction_auto_pay_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_pay_w_colon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_transaction_auto_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_transaction_message_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_w_colon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_transaction_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_transaction_message_here"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>