<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayBillActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/edit_text_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:hint="@string/hint_enter_amount"
            android:textColorHint="@color/black"/>

        <TextView
            android:id="@+id/text_view_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipient" />

        <Spinner
            android:id="@+id/spinner_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/pay_bill_to_array"/>

        <TextView
            android:id="@+id/text_view_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_account" />

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_write_a_message"
            android:textColorHint="@color/black"/>


        <CheckBox
            android:id="@+id/check_box_auto_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_automatically" />

        <Button
            android:id="@+id/pay_bill_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_payment"
            android:backgroundTint="@color/green"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>