<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherAccsTransferActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">


        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_write_a_title"
            android:textColorHint="@color/black"/>

        <TextView
            android:id="@+id/text_view_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/edit_text_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:hint="@string/hint_enter_amount"
            android:textColorHint="@color/black"/>

        <TextView
            android:id="@+id/text_view_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_account" />

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_account" />

        <Spinner
            android:id="@+id/spinner_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_write_a_message"
            android:textColorHint="@color/black"/>

        <Button
            android:id="@+id/transfer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_transfer"
            android:backgroundTint="@color/green"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>