<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_accounts"
        android:enabled="true"
        android:icon="@drawable/ic_accounts"
        android:title="@string/accounts"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_pay"
        android:enabled="true"
        android:icon="@drawable/ic_payment"
        android:title="@string/pay"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_transfer"
        android:enabled="true"
        android:icon="@drawable/ic_transfer"
        android:title="@string/transfer"
        app:showAsAction="ifRoom"
        />

</menu>