<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_account"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/add_account"
        app:showAsAction="ifRoom"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        />

    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/details"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_sign_out"
        android:enabled="true"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="ifRoom"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        />





</menu>