<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddAccountActivity">

    <EditText
        android:id="@+id/edit_text_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_name"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_type"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <Spinner
        android:layout_marginTop="16dp"
        android:id="@+id/account_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/add_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add_account"
        android:backgroundTint="@color/green"/>

</LinearLayout>